@@ -18,8 +18,8 @@
 
 package org.apache.roller.weblogger.ui.rendering.util;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import javax.servlet.http.HttpServletRequest;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -65,7 +65,7 @@ public class WeblogTrackbackRequest extends WeblogRequest {
         String pathInfo = this.getPathInfo();
         
         // was this request bound for the comment servlet?
-        if(servlet == null || !TRACKBACK_SERVLET.equals(servlet)) {
+        if(!TRACKBACK_SERVLET.equals(servlet)) {
             throw new InvalidRequestException("not a weblog trackback request, "+
                     request.getRequestURL());
         }
@@ -84,14 +84,9 @@ public class WeblogTrackbackRequest extends WeblogRequest {
                 
                 String context = pathElements[0];
                 if("entry".equals(context)) {
-                    try {
-                        this.weblogAnchor = 
-                                URLDecoder.decode(pathElements[1], "UTF-8");
-                    } catch (UnsupportedEncodingException ex) {
-                        // should never happen
-                        log.error(ex);
-                    }
-                    
+                    this.weblogAnchor =
+                            URLDecoder.decode(pathElements[1], StandardCharsets.UTF_8);
+
                 } else {
                     throw new InvalidRequestException("bad path info, "+
                             request.getRequestURL());
